--- a/cliente/package.json
+++ b/cliente/package.json
@@ -9,6 +9,8 @@
     "google-maps-react": "^2.0.2",
     "graphql": "^14.3.0",
     "graphql-tag": "^2.10.1",
+    "html2pdf.js": "^0.9.1",
+    "jspdf": "^1.5.3",
     "memoize-one": "^5.0.4",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
@@ -19,7 +21,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-select": "^3.0.3",
-    "recharts": "^1.6.1",
+    "recharts": "^1.6.2",
     "redux": "^4.0.1",
     "sweetalert2": "^8.11.1",
     "xlsx": "^0.14.3"
